# favicon-rustler

./: Cargo.toml  package.json
src/: lib.rs  utils.rs
