[package]
name = "favicon-rustler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
url = "2.2.2"
soup = "0.5.1"
worker = "0.0.18"
image = "0.23.14"  # Check for the latest version that might better support WASM
log = "0.4"
wasm-bindgen = "0.2"
serde_json = "1.0"

[profile.release]
opt-level = "s" # optimize for size in release builds
lto = true
strip = true
codegen-units = 1
